[Fix] 전체일정 조회하기 dto로 반환하기