@@ -2,6 +2,7 @@ package gg.calendar.api.user.schedule.publicschedule.service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -9,6 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 import gg.calendar.api.user.schedule.publicschedule.controller.response.TotalScheduleRetrieveResDto;
 import gg.data.calendar.PublicSchedule;
 import gg.repo.calendar.PublicScheduleRepository;
+import gg.utils.dto.ListResponseDto;
 import gg.utils.exception.ErrorCode;
 import gg.utils.exception.custom.InvalidParameterException;
 import lombok.RequiredArgsConstructor;
@@ -17,16 +19,13 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class TotalScheduleService {
-	private final PublicScheduleService publicScheduleService;
 	private final PublicScheduleRepository publicScheduleRepository;
 
-	@Transactional
-	public List<TotalScheduleRetrieveResDto> retrieveTotalSchedule(LocalDateTime start, LocalDateTime end) {
+	public ListResponseDto<TotalScheduleRetrieveResDto> retrieveTotalSchedule(LocalDateTime start, LocalDateTime end) {
 		validateTimeRange(start, end);
 		List<PublicSchedule> schedules = publicScheduleRepository.findByStartTimeBetween(start, end);
-		return schedules.stream()
-			.map(TotalScheduleRetrieveResDto::toDto)
-			.toList();
+		return ListResponseDto.toDto(
+			schedules.stream().map(TotalScheduleRetrieveResDto::toDto).collect(Collectors.toList()));
 	}
 
 	private void validateTimeRange(LocalDateTime startTime, LocalDateTime endTime) {
